--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/index.css">
+    <title>Pagina Principal</title>
 </head>
 <body>
-    
+    <header></header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
