--- a/contato.html
+++ b/contato.html
@@ -3,13 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/contato.css">
-  <title>Contato</title>
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/contato.css">
+  <title>Contato | AjudaRS</title>
 </head>
 <body>
-  <header></header>
-  <main></main>
-  <footer></footer>
+  <header>
+    <h2 id="tituloprincipal"><a href="index.html" rel="prev">AjudaRS</a></h2>
+    <nav id="navBar">
+        <ul>
+          <li class="itensNavBar"><a href="voluntario.html" target="_self" rel="next">Seja voluntário</a></li>
+          <li class="itensNavBar"><a href="doacao.html" target="_self" rel="next">Faça Doação</a></li>
+          <li class="itensNavBar"><a href="contato.html" target="_self" rel="next">Contato</a></li>
+        </ul>
+    </nav>
+  </header>
+  <main>
+    <h1>Precisa de ajuda?</h1>
+    <p>Caso tenha alguma dúvida, entre em contato conosco por meio dos nossos canais de comunicação:</p>
+    <ul id="listaContatos">
+      <li>Email: ajudars@ajudars.com</li>
+      <li>Telefone: (00) 0000-0000</li>
+      <li>Nossas redes sociais:</li>
+      <a href="#"><img src="assets/img/icone-whats.png" alt="ícone whatsApp"></a>
+      <a href="#"><img src="assets/img/icone-facebook.png" alt="ícone Facebook"></a>
+      <a href="#"><img src="assets/img/icone-X.png" alt="ícone X"></a>
+    </ul>
+  </main>
+  <footer>
+    <p>Ajude o povo do Rio Grande do Sul</p>
+  </footer>
 </body>
 </html>
