--- a/doacao.html
+++ b/doacao.html
@@ -3,12 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/doacao.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/doacao.css">
   <title>Faça Doações</title>
 </head>
 <body>
-  <header></header>
+  <header>
+    <h2 id="tituloprincipal"><a href="index.html" rel="prev">AjudaRS</a></h2>
+    <nav id="navBar">
+        <ul>
+          <li class="itensNavBar"><a href="voluntario.html" target="_self" rel="next">Seja voluntário</a></li>
+          <li class="itensNavBar"><a href="doacao.html" target="_self" rel="next">Faça Doação</a></li>
+          <li class="itensNavBar"><a href="contato.html" target="_self" rel="next">Contato</a></li>
+        </ul>
+    </nav>
+  </header>
   <main></main>
   <footer></footer>
 </body>
