--- a/voluntario.html
+++ b/voluntario.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,35 @@
   <link rel="stylesheet" href="./css/voluntario.css">
   <title>Seja Voluntário</title>
 </head>
+
 <body>
   <header></header>
-  <main></main>
+  <main>
+    <section class="form-voluntario">
+      <h2>Seja Voluntário</h2>
+      <p>Faça seu cadastro para se tornar voluntário e ajude dezenas de pessoas!</p>
+      <form>
+        <fieldset>
+          <div class="container">
+            <input type="text" id="name" name="name" placeholder="Seu Nome" required>
+          </div>
+        </fieldset>
+
+        <fieldset>
+          <div class="container">
+            <input type="tel" id="tel" name="tel" placeholder="Seu Telefone" required>
+          </div>
+
+          <div class="container">
+            <input type="email" name="email" id="email" placeholder="Seu email" autocomplete="email" required>
+          </div>
+
+          <button>Cadastrar</button>
+        </fieldset>
+      </form>
+    </section>
+  </main>
   <footer></footer>
 </body>
+
 </html>
