Consertando o src do botão 'seja vountario'

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h2 class="title-secondary">Precisa de ajuda?</h2>
             <p class="text">Se você foi afetado pelas enchentes e precisa de ajuda, entre em <a class="link" href="./contato.html">contato conosco</a>. Estamos aqui para ajudar você a reconstruir a sua vida.</p>
         </section>
-            <a href="seja-voluntario.html" class="button">Seja Voluntário</a>
+            <a href="voluntario.html" class="button">Seja Voluntário</a>
     </main>
     <footer></footer>
 </body>
