--- a/contato.html
+++ b/contato.html
@@ -9,14 +9,16 @@
 </head>
 <body>
   <header>
-    <h2 id="tituloprincipal"><a href="index.html" rel="prev">AjudaRS</a></h2>
-    <nav id="navBar">
-        <ul>
-          <li class="itensNavBar"><a href="voluntario.html" target="_self" rel="next">Seja voluntário</a></li>
-          <li class="itensNavBar"><a href="doacao.html" target="_self" rel="next">Faça Doação</a></li>
-          <li class="itensNavBar"><a href="contato.html" target="_self" rel="next">Contato</a></li>
-        </ul>
-    </nav>
+    <section class="header-container">
+      <h2 id="tituloprincipal"><a href="index.html" rel="prev">AjudaRS</a></h2>
+      <nav id="navBar">
+          <ul>
+              <li class="itensNavBar"><a href="voluntario.html" target="_self" rel="next">Seja voluntário</a></li>
+              <li class="itensNavBar"><a href="doacao.html" target="_self" rel="next">Faça Doação</a></li>
+              <li class="itensNavBar"><a href="contato.html" target="_self" rel="next">Contato</a></li>
+          </ul>
+      </nav>
+  </section>
   </header>
   <main>
     <section id="conteudoContato">
