--- a/doacao.html
+++ b/doacao.html
@@ -21,6 +21,11 @@
   </section>
   </header>
   <main></main>
-  <footer></footer>
+  <footer>
+    <div class="footer-container">
+        <p>Ajude o povo do Rio Grande do Sul</p>
+        <p><a href="./contato.html">Nossos Contatos</a></p>
+    </div>
+</footer>
 </body>
 </html>
