--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
         </section>
             <a href="voluntario.html" class="button">Seja Voluntário</a>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+            <p>Ajude o povo do Rio Grande do Sul</p>
+            <p><a href="./contato.html">Nossos Contatos</a></p>
+        </div>
+    </footer>
 </body>
 
 </html>
