--- a/voluntario.html
+++ b/voluntario.html
@@ -51,7 +51,12 @@
       </form>
     </section>
   </main>
-  <footer></footer>
+  <footer>
+    <div class="footer-container">
+        <p>Ajude o povo do Rio Grande do Sul</p>
+        <p><a href="./contato.html">Nossos Contatos</a></p>
+    </div>
+</footer>
 </body>
 
 </html>
