problemas no header das paginas voluntarios e doações consertados

--- a/doacao.html
+++ b/doacao.html
@@ -14,13 +14,13 @@
     <section class="header-container">
       <h2 id="tituloprincipal"><a href="index.html" rel="prev">AjudaRS</a></h2>
       <nav id="navBar">
-          <ul>
-              <li class="itensNavBar"><a href="voluntario.html" target="_self" rel="next">Seja voluntário</a></li>
-              <li class="itensNavBar"><a href="doacao.html" target="_self" rel="next">Faça Doação</a></li>
-              <li class="itensNavBar"><a href="contato.html" target="_self" rel="next">Contato</a></li>
-          </ul>
+        <ul>
+          <li class="itensNavBar"><a href="voluntario.html" target="_self" rel="next">Seja voluntário</a></li>
+          <li class="itensNavBar"><a href="doacao.html" target="_self" rel="next">Faça Doação</a></li>
+          <li class="itensNavBar"><a href="contato.html" target="_self" rel="next">Contato</a></li>
+        </ul>
       </nav>
-  </section>
+    </section>
   </header>
   <main>
     <section class="container">
@@ -31,19 +31,17 @@
       </div>
 
       <div class="map-Box">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3180721.0034647435!2d-52.77011729836802!3d-29.08911123952336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1729959999675!5m2!1spt-BR!2sbr"
-          style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3180721.0034647435!2d-52.77011729836802!3d-29.08911123952336!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1729959999675!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
 
   </main>
   <footer>
     <div class="footer-container">
-        <p>Ajude o povo do Rio Grande do Sul</p>
-        <p><a href="./contato.html">Nossos Contatos</a></p>
+      <p>Ajude o povo do Rio Grande do Sul</p>
+      <p><a href="./contato.html">Nossos Contatos</a></p>
     </div>
-</footer>
+  </footer>
 </body>
 
 </html>
