texto projeto atualizado

--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
         </section>
         <section class="project">
             <h2 class="title-secondary">Conheça o projeto</h2>
-            <p class="text">O AjudaRS é um projeto que visa ajudar as pessoas que foram afetadas pelas enchentes no Rio Grande do Sul. Através de doações e voluntários, queremos ajudar a reconstruir a vida dessas pessoas.</p>
+            <p class="text"><strong>AjudaRS</strong> é uma iniciativa dedicada a apoiar as vítimas das enchentes no Rio Grande do Sul, que enfrentam grandes desafios para reconstruir suas vidas. Nosso objetivo é <strong> centralizar toda a assistência em uma única plataforma</strong>, promovendo uma comunicação direta e eficaz entre voluntários e aqueles impactados pela tragédia.</p>
+            <p class="text">Para facilitar essa conexão, estamos simplificando o processo de doações, indicando pontos de coletas, garantindo que as contribuições cheguem rapidamente a quem mais precisa, além disso, criamos um cadastro único de voluntários, onde cada pessoa pode se inscrever e oferecer seu apoio, seja por meio de trabalho físico, doações de alimentos, roupas ou outras formas de assistência.</p>
+            <p class="text">Buscamos unir todos que desejam contribuir em um único lugar, tornando o processo de ajuda mais eficiente e acessível. Dessa forma, esperamos criar uma corrente humanitária forte e solidária, permitindo os afetados a reerguerem suas vidas com dignidade e esperança.</p>
             <picture>
-                <img src="./assets/img/projeto-img 1.png" height="470" alt="Imagem de duas mãos se apertando">
+                <img class="" src="./assets/img/projeto-img 1.png" width="400" alt="Imagem de duas mãos se apertando">
             </picture>
         </section>
         <section class="information">
@@ -48,7 +50,7 @@
             <h2 class="title-secondary">Precisa de ajuda?</h2>
             <p class="text">Se você foi afetado pelas enchentes e precisa de ajuda, entre em <a class="link" href="./contato.html">contato conosco</a>. Estamos aqui para ajudar você a reconstruir a sua vida.</p>
         </section>
-            <a href="voluntario.html" class="button">Seja Voluntário</a>
+        <a href="voluntario.html" class="button">Seja Voluntário</a>
     </main>
     <footer>
         <div class="footer-container">
